[gd_scene load_steps=3 format=3 uid="uid://ber6ciocypcrw"]

[ext_resource type="Script" path="res://widgets/selection_carusel/talent_selection_carusel.gd" id="1_qit8k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1mlgd"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="SelectionCarusel" type="Control"]
z_index = 1
custom_minimum_size = Vector2(400, 250)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
script = ExtResource("1_qit8k")
title = "Skills"

[node name="SelectionCarusel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 250)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="SelectionCarusel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="SelectionCarusel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="SelectionCarusel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Sets"

[node name="HBoxContainer" type="HBoxContainer" parent="SelectionCarusel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PushSelection" type="Button" parent="SelectionCarusel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
text = "Push"

[node name="LegSelection" type="Button" parent="SelectionCarusel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
text = "Leg"

[node name="PullSelection" type="Button" parent="SelectionCarusel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
text = "Pull"

[node name="CoreSelection" type="Button" parent="SelectionCarusel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
text = "Core"

[node name="PanelContainer" type="PanelContainer" parent="SelectionCarusel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1mlgd")

[node name="MarginContainer" type="MarginContainer" parent="SelectionCarusel/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="SelectionCarusel/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="ObjectContainer" type="HBoxContainer" parent="SelectionCarusel/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 35

[node name="SelectionMarker" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = 52.405
offset_right = 0.5
offset_bottom = 53.405
grow_horizontal = 2
grow_vertical = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="scroll_ended" from="SelectionCarusel/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer" to="." method="_on_scroll_container_scroll_ended"]
